Add ProductsStocks API and update OrdersController to handle with stock quantity.
